# springcard-ccid-tcp

./: .gitignore  INSTALL  Makefile  Makefile.am  Makefile.in  README  README.md  build.sh  config.h  config.h.in  config.status  configure  configure.ac  libtool  springcard_ccid_tcp-1.4.18.tar.bz2
autom4te.cache/: output.2  output.3  requests  traces.0  traces.1  traces.2  traces.2t  traces.3
doc/: Springcard_CCID_TCP.html
readers/: Makefile  Makefile.am  Makefile.in  supported_readers.txt
src/: 92_pcscd_springcardccidtcp.rules  Info.plist  Makefile  Makefile.am  Makefile.in  ccid_network.c  ccid_network.h  commands.c  commands.h  config.h  defs.h  ifdhandler.c  libspringcard_ccid_tcp.la  libspringcard_ccid_tcp_la-ccid.lo  libspringcard_ccid_tcp_la-ccid_network.lo  libspringcard_ccid_tcp_la-commands.lo  libspringcard_ccid_tcp_la-ifdhandler.lo  libspringcard_ccid_tcp_la-simclist.lo  libspringcard_ccid_tcp_la-strlcpy.lo  libspringcard_ccid_tcp_la-tokenparser.lo  libspringcard_ccid_tcp_la-utils.lo  springcard_ccid_tcp.c  springcard_ccid_tcp.h
src/.deps/: libspringcard_ccid_tcp_la-ccid.Plo  libspringcard_ccid_tcp_la-ccid_network.Plo  libspringcard_ccid_tcp_la-commands.Plo  libspringcard_ccid_tcp_la-ifdhandler.Plo  libspringcard_ccid_tcp_la-simclist.Plo  libspringcard_ccid_tcp_la-strlcpy.Plo  libspringcard_ccid_tcp_la-tokenparser.Plo  libspringcard_ccid_tcp_la-utils.Plo
src/.libs/: libspringcard_ccid_tcp.la  libspringcard_ccid_tcp.lai
src/openct/: libspringcard_ccid_tcp_la-buffer.lo  libspringcard_ccid_tcp_la-checksum.lo  libspringcard_ccid_tcp_la-proto-t1.lo
src/openct/.deps/: libspringcard_ccid_tcp_la-buffer.Plo  libspringcard_ccid_tcp_la-checksum.Plo  libspringcard_ccid_tcp_la-proto-t1.Plo
src/towitoko/: libspringcard_ccid_tcp_la-atr.lo  libspringcard_ccid_tcp_la-pps.lo
src/towitoko/.deps/: libspringcard_ccid_tcp_la-atr.Plo  libspringcard_ccid_tcp_la-pps.Plo
